--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,11 @@
+:root{
+    --text-color: #dbe4ef;
+    --card-front-color: #144480;
+    --card-back-color: #00f4bf:
+}
+
 body {
-    background-color: antiquewhite;
+    background: url('img/bg-desktop.webp');
     font-family: 'Bai Jamjuree';
 }
 
@@ -9,19 +15,19 @@ body {
 
 .cartao {
     margin: 1rem 1rem;
-    background-color: aqua;
     height: 20rem;
     flex-grow: 1;
     flex-basic: calc(33% - 6rem);
 }
 
 .cartao__conteudo {
-    text-align:
-    neight: 100%
+    background-color: var(--card-front-color);
+    text-align: center;
+    height: 100%;
 }
 
 .cartao__conteudo h3 {
-    background-color: black;
+    background-color: var(--text-color);
     text-align left;
     padding: 0.5rem;
     position: absolute;
@@ -33,4 +39,19 @@ body {
 .cartao__conteudo p {
     margin-top: 1rem;
     padding: 2rem;
+}
+
+footer {
+   background-color: black;
+   color: white;
+   position: fixed;
+   bottom: 0;
+   widht: 100%
+   height: 2rem;
+}
+
+footer p {
+    text-align: center;
+    font-size: 0.6rem;
+    margin-top: 0.5rem;
 }
