--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@ body {
     margin: 1rem 1rem;
     height: 20rem;
     flex-grow: 1;
-    flex-basic: calc(33% - 6rem);
+    flex-basis: calc(33% - 6rem);
 }
 
 .cartao__conteudo {
@@ -31,7 +31,7 @@ body {
 .cartao__conteudo h3 {
     background-color: var(--text-color);
     border: 1px solid var(--text-color);
-    text-align left;
+    text-align: left;
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
@@ -65,7 +65,7 @@ body {
     backface-visibility: hidden;
     position: absolute;
     height: 100%;
-    widht: 100%;
+    width: 100%;
 }
 
 .cartao__conteudo__resposta{
@@ -77,7 +77,7 @@ footer {
    color: white;
    position: fixed;
    bottom: 0;
-   widht: 100%
+   width: 100%;
    height: 2rem;
 }
 
